Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-133886

Regression in 6.9: Hover in ComboBox broken with ApplicationWindow

XMLWordPrintable

    • macOS, Windows
    • acdcec11f (6.9.0), 8fb643f6d (dev), 41d4ff557 (6.9), 2a424a029 (dev), a2dd7adc6 (6.9)

      Please notive the hover effect for the ComboBox items.

      With Qt 6.8 this works both for Window or ApplicationWindow as root.
      With Qt 6.9 this does not hover with ApplicationWindow as root.

      Tried on Windows + macOS (native styles).

      import QtQuick
      import QtQuick.Controls
      
      // Window {
      ApplicationWindow {
        width: 640
        height: 480
        visible: true
        title: qsTr("Hello World")
      
        ComboBox {
          model: 10
          width: 300
        }
      }
      

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            mitch_curtis Mitch Curtis
            njeisecke Nils Jeisecke
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: