src/quicktemplates/qquickapplicationwindow.cpp
@@ -822,6 +822,13 @@ void QQuickApplicationWindow::classBegin()
     // them.
     d->control = new QQuickControl(QQuickWindow::contentItem());
     d->control->setObjectName("ApplicationWindowContentControl");
+    // Now that QQuickContentItem's parent is the content control rather
+    // than QQuickRootItem, we need to ensure that the control has the
+    // correct hoverEnabled value. If we don't do this (get the value
+    // from the style hints), it will use QQuickItem's default value of false
+    // and some controls won't be hoverable when they should be.
+    QQuickControlPrivate::get(d->control)->updateHoverEnabled(
+        QQuickControlPrivate::calcHoverEnabled(nullptr), false);
     auto *contentItem = new QQuickContentItem(this, d->control);
     // The content item can't be its own focus scope here, as that
     // will detach focus of items inside the content item from focus
