tests/auto/quickcontrols/qquickcontrol/data/controlInApplicationWindow.qml
@@ -1,0 +1,18 @@
+// Copyright (C) 2025 The Qt Company Ltd.
+// SPDX-License-Identifier: LicenseRef-Qt-Commercial OR GPL-3.0-only
+
+import QtQuick
+import QtQuick.Controls
+
+ApplicationWindow {
+    width: 400
+    height: 400
+
+    property alias control: control
+
+    Control {
+        id: control
+        width: 100
+        height: 100
+    }
+}
